--- a/permission_handler/pubspec.yaml
+++ b/permission_handler/pubspec.yaml
@@ -23,7 +23,10 @@ dependencies:
     sdk: flutter
   meta: ^1.7.0
   permission_handler_android:
-    path: ../permission_handler_android
+    git:
+      url: https://github.com/shuikeyi/flutter-permission-handler.git
+      ref: main
+      path: permission_handler_android
   permission_handler_apple: ^9.1.1
   permission_handler_windows: ^0.1.3
   permission_handler_platform_interface: ^3.11.0
